feat: add job update delete endpoints
